--- a/code/add_employee.kv
+++ b/code/add_employee.kv
@@ -153,7 +153,7 @@
                         CustomButton:
                             id: add
                             text: "Añadir"
-                            on_release: root.add_employee(f"({name.text}, {cargo.text}, {cellphone.text}, {date_init.text})", root.insert_address(f"{av.text},{kra.text},{dg.text},{tr.text},{number.text},{district.text}"))
+                            on_release: text_notice.text = str(root.add_employee(f"{name.text},{cargo.text},{cellphone.text},null,{date_init.text}", root.insert_address(f"{av.text},{kra.text},{dg.text},{tr.text},{number.text},{district.text}")))
                     BoxLabel:
                         id: list
                 BoxLabel:
