--- a/code/interface.kv
+++ b/code/interface.kv
@@ -59,6 +59,6 @@
                 size_hint_y: 0.1
                 Button:
                     text: "Exit"
-                    on_release: app.back()
+                    on_release: exit()
 
 
