--- a/code/add_employee.kv
+++ b/code/add_employee.kv
@@ -26,6 +26,7 @@
                     size_hint_x: .2
                     size_hint_y: .9
                     CustomButton:
+                        size_hint_y: .85
                         text: "Reload"
                         on_release: root.reload()
                         on_release: text_notice.text = name.text = cellphone.text = ''
@@ -179,6 +180,3 @@
                         id: list
                 BoxLabel:
                     size_hint_x: .4
-
-
-
