--- a/code/add_implement.kv
+++ b/code/add_implement.kv
@@ -1,6 +1,9 @@
 #: import C kivy.utils.get_color_from_hex
 
 <AddImplement>:
+    add: add
+    name: name
+    supplier: supplier
     comprar: comprar
     FloatLayout:
         BoxContainer:
@@ -40,22 +43,27 @@
                         text: "Proveedor"
                         font_size: "18sp"
                     Tex:
-                        cols: 0
                         hint_text: "Nombre"
                         id: name
+                        on_focus: passed_text.text = error_text.text = ""
+                        on_focus: add.disabled = True
                     Tex:
                         size_hint_x: .4
                         hint_text: "Costo"
                         id: costo
-
+                        on_focus: passed_text.text = error_text.text = ""
+                        on_focus: add.disabled = True
                     Tex:
                         size_hint_x: .3
                         hint_text: "Cantidad"
                         id: cantidad
-                        #on_focus: total.text = "$"+ str(root.total(self.text, costo.text))
+                        on_focus: passed_text.text = error_text.text = ""
+                        on_focus: add.disabled = True
                     Tex:
                         hint_text: "Proveedor"
                         id: supplier
+                        on_focus: passed_text.text = error_text.text = ""
+                        on_focus: add.disabled = True
                 BoxContainer:
                     size_hint_y: .4
                     orientation: "horizontal"
@@ -70,19 +78,34 @@
                     CustomButton:
                         size_hint_x: .8
                         text: "Verificar"
-                        on_release: error_text.text = str(root.validate(name.text, supplier.text))
+                        on_release: error_text.text = str(root.validate(name.text, supplier.text, date.text, total.text))
+                    CustomButton:
+                        id: add
+                        size_hint_x: .8
+                        text: "+Add"
+                        disabled: True
+                        on_release: passed_text.text = str(root.add_new(f"{name.text}, {supplier.text}", f"{supplier.text}"))
+                        on_press: passed_text.text = error_text.text = ""
                     BoxLabel:
+                        size_hint_x: .2
             BoxContainerSentences:
                 orientation: "vertical"
                 spacing: "10sp"
-                BoxLabel
+                TextMessage:
+                    id: passed_text
+                    size_hint: 1., 1.
+                    font_size:
+                    color: C("#33BB00")
                 BoxContainer:
                     BoxLabel
                     LabelText:
                         size_hint_x: .7
                         font_size: "18sp"
                         text: "Fecha de pedido:"
-                    Tex
+                    Tex:
+                        on_focus: add.disabled = True
+                        on_focus: passed_text.text = error_text.text = ""
+                        id: date
                         hint_text: "YYYY-MM-DD"
                     BoxLabel
                 BoxContainer:
@@ -90,6 +113,7 @@
                     CustomButton:
                         text: "Cancelar"
                         on_release: app.go_menu()
+                        on_release: passed_text.text = error_text.text = ""
                     CustomButton:
                         id: comprar
                         text: "Comprar"
@@ -97,29 +121,3 @@
                     BoxLabel
                 BoxLabel
                     size_hint_y: 2.
-
-<OpenPopup>:
-    message_pop: message_pop
-    size_hint: .6, .3
-    auto_dismiss: False
-    title: 'Error'
-    BoxLayout:
-        spacing: "5sp"
-        padding: "10sp"
-        orientation: "vertical"
-        Label:
-            halign: 'center'
-            text_size: root.width, None
-            size: self.texture_size
-            id: message_pop
-        BoxLayout:
-            orientation: "horizontal"
-            spacing: "5sp"
-            CustomButton:
-                size_hint_y: .8
-                text: 'Cancelar'
-                on_release: root.dismiss()
-            CustomButton:
-                size_hint_y: .8
-                text: "Aceptar"
-                on_release: root.dismiss()
