--- a/code/class_kivy.kv
+++ b/code/class_kivy.kv
@@ -192,3 +192,10 @@
         center: root.center
         size: self.size
 
+<ImageButtonR@CustomButtonIco>:
+    source: None
+    Image:
+        source: root.source
+        center: root.center
+        size: dp(50), dp(50)
+
