maintenance managers validations

--- a/code/maintenance.kv
+++ b/code/maintenance.kv
@@ -58,7 +58,7 @@
                 BoxLabel
                 LabelText:
                     #size_hint_x: .5
-                    text: "Asignado a mantenimiento:"
+                    text: "Encargado del mantenimiento:    "
                 Spinner:
                     id: asignado
                     size_hint_x: .4
